# src_platform_clip-libvserver

./: AUTHORS  CHANGELOG  Makefile.am  README.md  clip-vserver.pc.in  configure.ac
debian/: changelog  control  copyright  rules
docs/: Makefile.am  doxyfile_html
src/: Makefile.am  clip-context.c  clip-iattr.c  clip-namespace.c  clip-net.c  clip-vlogin.c  clip-vserver.h  syscall-ctx.h  syscall-iattr.h  syscall-net.h  syscall-space.h  syscall.h
test/: Makefile  test_common.h  test_context.c  test_context_enter.c  test_iattr.c  test_jail.c  test_namespace.c  test_namespace_enter.c  test_net.c  test_net_multi.c  test_prelude.h  test_vlogin.c
